OOP CP completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.data.mongodb.uri=mongodb+srv://soham041201:soham123*@cluster0.diltc.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=cluster0
+jwt.secret=oopcourseproject
+
